parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    array
    comment1
    comment2
    dolar
    not
    push2
    salto
    tab

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> INSTRUCCIONES2
Rule 2     INSTRUCCIONES2 -> INSTRUCCIONES2 INSTRUCCION2 puntocoma
Rule 3     INSTRUCCIONES2 -> INSTRUCCION2 puntocoma
Rule 4     INSTRUCCION2 -> IMPRIMIR
Rule 5     INSTRUCCION2 -> FUNCIONES
Rule 6     INSTRUCCION2 -> SCOPE
Rule 7     INSTRUCCION2 -> DECLFUNC
Rule 8     INSTRUCCION2 -> LLAMADAFUNC
Rule 9     INSTRUCCION2 -> TRANSF
Rule 10    INSTRUCCION2 -> SOPERACIONES
Rule 11    INSTRUCCION2 -> TYPESTRUCT
Rule 12    INSTRUCCIONES -> INSTRUCCIONES INSTRUCCION puntocoma
Rule 13    INSTRUCCIONES -> INSTRUCCION puntocoma
Rule 14    INSTRUCCION -> IMPRIMIR
Rule 15    INSTRUCCION -> FUNCIONES
Rule 16    INSTRUCCION -> SCOPE
Rule 17    INSTRUCCION -> DECLFUNC
Rule 18    INSTRUCCION -> LLAMADAFUNC
Rule 19    INSTRUCCION -> TRANSF
Rule 20    INSTRUCCION -> SOPERACIONES
Rule 21    INSTRUCCION -> TYPESTRUCT
Rule 22    SOPERACIONES -> SOPSTRING
Rule 23    SOPERACIONES -> SOPNATIV
Rule 24    SOPERACIONES -> OPID
Rule 25    SOPERACIONES -> SOPLOG
Rule 26    SOPERACIONES -> DECLNATIV
Rule 27    TIPOS -> int64
Rule 28    TIPOS -> float64
Rule 29    TIPOS -> bool
Rule 30    TIPOS -> char
Rule 31    TIPOS -> string
Rule 32    TIPOS -> id
Rule 33    ALGO -> SOPERACIONES
Rule 34    ALGO -> ARREGLO
Rule 35    ALGO -> LLAMADARR
Rule 36    ALGO -> STRUCTINI
Rule 37    ALGO -> id
Rule 38    TYPESTRUCT -> STRUCT
Rule 39    TYPESTRUCT -> mutable STRUCT
Rule 40    STRUCT -> struct id ATRIBUTOS end
Rule 41    ATRIBUTOS -> ATRIBUTOS ATRIBUTO puntocoma
Rule 42    ATRIBUTOS -> ATRIBUTO puntocoma
Rule 43    ATRIBUTO -> id dos_dospuntos TIPOS
Rule 44    ATRIBUTO -> id
Rule 45    STRUCTINI -> id parentesisa PARAMSFUNCS parentesisc
Rule 46    STRUCTASIGN -> id
Rule 47    STRUCTASIGNS -> STRUCTASIGNS punto STRUCTASIGN
Rule 48    STRUCTASIGNS -> STRUCTASIGN
Rule 49    ARREGLO -> corchetea ARRCONTS corchetec
Rule 50    ARRCONTS -> ARRCONTS coma ARRCONT
Rule 51    ARRCONTS -> ARRCONT
Rule 52    ARRCONT -> ALGO
Rule 53    ARRCONT -> <empty>
Rule 54    LLAMADARR -> id INDARS
Rule 55    INDARS -> INDARS INDAR corchetec
Rule 56    INDARS -> INDAR corchetec
Rule 57    INDAR -> corchetea id
Rule 58    INDAR -> corchetea OPID
Rule 59    DECLFUNC -> function id parentesisa PARAMS parentesisc INSTRUCCIONES end
Rule 60    PARAMS -> PARAMS coma PARAM
Rule 61    PARAMS -> PARAM
Rule 62    PARAM -> id
Rule 63    PARAM -> <empty>
Rule 64    PARAM -> id dos_dospuntos TIPOS
Rule 65    LLAMADAFUNC -> id parentesisa PARAMSFUNCS parentesisc
Rule 66    PARAMSFUNCS -> PARAMSFUNCS coma PARAMSFUNC
Rule 67    PARAMSFUNCS -> PARAMSFUNC
Rule 68    PARAMSFUNC -> ALGO
Rule 69    PARAMSFUNC -> <empty>
Rule 70    SCOPE -> global ASIGNACION
Rule 71    SCOPE -> local ASIGNACION
Rule 72    SCOPE -> ASIGNACION
Rule 73    NOMBREALGO -> LLAMADARR
Rule 74    NOMBREALGO -> STRUCTASIGNS
Rule 75    NOMBREALGO -> id
Rule 76    ASIGNACION -> NOMBREALGO igual SOPSTRING
Rule 77    ASIGNACION -> NOMBREALGO igual ALGO
Rule 78    ASIGNACION -> NOMBREALGO igual ALGO dos_dospuntos TIPOS
Rule 79    ASIGNACION -> NOMBREALGO igual nothing
Rule 80    ASIGNACION -> NOMBREALGO
Rule 81    FUNCIONES -> FIF
Rule 82    FUNCIONES -> FWHILE
Rule 83    FUNCIONES -> FFOR
Rule 84    TRANSF -> break
Rule 85    TRANSF -> continue
Rule 86    TRANSF -> return
Rule 87    TRANSF -> return ALGO
Rule 88    FFOR -> for id in RANGO INSTRUCCIONES end
Rule 89    RANGO -> OPID dospuntos OPID
Rule 90    RANGO -> cadena
Rule 91    RANGO -> id
Rule 92    RANGO -> ARREGLO
Rule 93    FWHILE -> while SOPLOG INSTRUCCIONES end
Rule 94    FIF -> if SOPLOG INSTRUCCIONES FELSEIF
Rule 95    FIF -> if SOPLOG INSTRUCCIONES FELSE
Rule 96    FIF -> if SOPLOG INSTRUCCIONES end
Rule 97    FELSEIF -> elseif SOPLOG INSTRUCCIONES FELSEIF
Rule 98    FELSEIF -> elseif SOPLOG INSTRUCCIONES FELSE
Rule 99    FELSEIF -> elseif SOPLOG INSTRUCCIONES end
Rule 100   FELSE -> else INSTRUCCIONES end
Rule 101   FIFUNI -> SOPLOG interrogacionc ALGO dospuntos ALGO
Rule 102   IMPRIMIR -> println parentesisa SCONTPRNTS parentesisc
Rule 103   IMPRIMIR -> print parentesisa SCONTPRNTS parentesisc
Rule 104   SCONTPRNTS -> SCONTPRNTS coma SCONTPRNT
Rule 105   SCONTPRNTS -> SCONTPRNT
Rule 106   SCONTPRNT -> ALGO
Rule 107   SCONTPRNT -> FIFUNI
Rule 108   SCONTPRNT -> LLAMADAFUNC
Rule 109   OPID -> OPID mas OPID
Rule 110   OPID -> OPID menos OPID
Rule 111   OPID -> OPID asterisco OPID
Rule 112   OPID -> OPID dividido OPID
Rule 113   OPID -> OPID modulo OPID
Rule 114   OPID -> OPID elevado OPID
Rule 115   OPID -> menos OPID
Rule 116   OPID -> parentesisa OPID parentesisc
Rule 117   OPID -> NATMATH parentesisa OPID parentesisc
Rule 118   OPID -> log parentesisa OPID coma OPID parentesisc
Rule 119   OPID -> int
Rule 120   OPID -> flotante
Rule 121   OPID -> id
Rule 122   OPID -> cadena
Rule 123   OPID -> caracter
Rule 124   OPID -> LLAMADARR
Rule 125   OPID -> LLAMADAFUNC
Rule 126   OPID -> SOPNATIV
Rule 127   SOPLOG -> SOPLOG and SOPLOG
Rule 128   SOPLOG -> SOPLOG or SOPLOG
Rule 129   SOPLOG -> SOPLOG mayorque SOPLOG
Rule 130   SOPLOG -> SOPLOG menorque SOPLOG
Rule 131   SOPLOG -> SOPLOG mayoriwal SOPLOG
Rule 132   SOPLOG -> SOPLOG menoriwal SOPLOG
Rule 133   SOPLOG -> SOPLOG iwaliwal SOPLOG
Rule 134   SOPLOG -> SOPLOG distintoque SOPLOG
Rule 135   SOPLOG -> parentesisa SOPLOG parentesisc
Rule 136   SOPLOG -> OPID
Rule 137   SOPLOG -> LLAMADARR
Rule 138   SOPLOG -> SOPNATIV
Rule 139   SOPLOG -> cadena
Rule 140   SOPLOG -> caracter
Rule 141   SOPLOG -> id
Rule 142   SOPLOG -> true
Rule 143   SOPLOG -> false
Rule 144   SOPNATIV -> uppercase parentesisa SOPN parentesisc
Rule 145   SOPNATIV -> lowercase parentesisa SOPN parentesisc
Rule 146   SOPNATIV -> length parentesisa SOPN parentesisc
Rule 147   SOPNATIV -> pop parentesisa SOPN parentesisc
Rule 148   SOPN -> SOPSTRING
Rule 149   SOPN -> ARREGLO
Rule 150   SOPN -> LLAMADARR
Rule 151   SOPNATIV -> push parentesisa SOPN coma ALGO parentesisc
Rule 152   DECLNATIV -> parse parentesisa TIPOS coma ALGO parentesisc
Rule 153   DECLNATIV -> trunc parentesisa ALGO parentesisc
Rule 154   DECLNATIV -> float parentesisa ALGO parentesisc
Rule 155   DECLNATIV -> string parentesisa ALGO parentesisc
Rule 156   DECLNATIV -> typeof parentesisa ALGO parentesisc
Rule 157   SOPSTRING -> SOPSTRING asterisco SOPSTRING
Rule 158   SOPSTRING -> SOPSTRING elevado int
Rule 159   SOPSTRING -> SOPSTRING elevado id
Rule 160   SOPSTRING -> cadena
Rule 161   SOPSTRING -> caracter
Rule 162   SOPSTRING -> id
Rule 163   SOPSTRING -> SOPNATIV
Rule 164   SOPSTRING -> DECLNATIV
Rule 165   NATMATH -> log10
Rule 166   NATMATH -> sin
Rule 167   NATMATH -> cos
Rule 168   NATMATH -> tan
Rule 169   NATMATH -> sqrt

Terminals, with rules where they appear

and                  : 127
array                : 
asterisco            : 111 157
bool                 : 29
break                : 84
cadena               : 90 122 139 160
caracter             : 123 140 161
char                 : 30
coma                 : 50 60 66 104 118 151 152
comment1             : 
comment2             : 
continue             : 85
corchetea            : 49 57 58
corchetec            : 49 55 56
cos                  : 167
distintoque          : 134
dividido             : 112
dolar                : 
dos_dospuntos        : 43 64 78
dospuntos            : 89 101
elevado              : 114 158 159
else                 : 100
elseif               : 97 98 99
end                  : 40 59 88 93 96 99 100
error                : 
false                : 143
float                : 154
float64              : 28
flotante             : 120
for                  : 88
function             : 59
global               : 70
id                   : 32 37 40 43 44 45 46 54 57 59 62 64 65 75 88 91 121 141 159 162
if                   : 94 95 96
igual                : 76 77 78 79
in                   : 88
int                  : 119 158
int64                : 27
interrogacionc       : 101
iwaliwal             : 133
length               : 146
local                : 71
log                  : 118
log10                : 165
lowercase            : 145
mas                  : 109
mayoriwal            : 131
mayorque             : 129
menoriwal            : 132
menorque             : 130
menos                : 110 115
modulo               : 113
mutable              : 39
not                  : 
nothing              : 79
or                   : 128
parentesisa          : 45 59 65 102 103 116 117 118 135 144 145 146 147 151 152 153 154 155 156
parentesisc          : 45 59 65 102 103 116 117 118 135 144 145 146 147 151 152 153 154 155 156
parse                : 152
pop                  : 147
print                : 103
println              : 102
punto                : 47
puntocoma            : 2 3 12 13 41 42
push                 : 151
push2                : 
return               : 86 87
salto                : 
sin                  : 166
sqrt                 : 169
string               : 31 155
struct               : 40
tab                  : 
tan                  : 168
true                 : 142
trunc                : 153
typeof               : 156
uppercase            : 144
while                : 93

Nonterminals, with rules where they appear

ALGO                 : 52 68 77 78 87 101 101 106 151 152 153 154 155 156
ARRCONT              : 50 51
ARRCONTS             : 49 50
ARREGLO              : 34 92 149
ASIGNACION           : 70 71 72
ATRIBUTO             : 41 42
ATRIBUTOS            : 40 41
DECLFUNC             : 7 17
DECLNATIV            : 26 164
FELSE                : 95 98
FELSEIF              : 94 97
FFOR                 : 83
FIF                  : 81
FIFUNI               : 107
FUNCIONES            : 5 15
FWHILE               : 82
IMPRIMIR             : 4 14
INDAR                : 55 56
INDARS               : 54 55
INICIO               : 0
INSTRUCCION          : 12 13
INSTRUCCION2         : 2 3
INSTRUCCIONES        : 12 59 88 93 94 95 96 97 98 99 100
INSTRUCCIONES2       : 1 2
LLAMADAFUNC          : 8 18 108 125
LLAMADARR            : 35 73 124 137 150
NATMATH              : 117
NOMBREALGO           : 76 77 78 79 80
OPID                 : 24 58 89 89 109 109 110 110 111 111 112 112 113 113 114 114 115 116 117 118 118 136
PARAM                : 60 61
PARAMS               : 59 60
PARAMSFUNC           : 66 67
PARAMSFUNCS          : 45 65 66
RANGO                : 88
SCONTPRNT            : 104 105
SCONTPRNTS           : 102 103 104
SCOPE                : 6 16
SOPERACIONES         : 10 20 33
SOPLOG               : 25 93 94 95 96 97 98 99 101 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135
SOPN                 : 144 145 146 147 151
SOPNATIV             : 23 126 138 163
SOPSTRING            : 22 76 148 157 157 158 159
STRUCT               : 38 39
STRUCTASIGN          : 47 48
STRUCTASIGNS         : 47 74
STRUCTINI            : 36
TIPOS                : 43 64 78 152
TRANSF               : 9 19
TYPESTRUCT           : 11 21

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . INSTRUCCIONES2
    (2) INSTRUCCIONES2 -> . INSTRUCCIONES2 INSTRUCCION2 puntocoma
    (3) INSTRUCCIONES2 -> . INSTRUCCION2 puntocoma
    (4) INSTRUCCION2 -> . IMPRIMIR
    (5) INSTRUCCION2 -> . FUNCIONES
    (6) INSTRUCCION2 -> . SCOPE
    (7) INSTRUCCION2 -> . DECLFUNC
    (8) INSTRUCCION2 -> . LLAMADAFUNC
    (9) INSTRUCCION2 -> . TRANSF
    (10) INSTRUCCION2 -> . SOPERACIONES
    (11) INSTRUCCION2 -> . TYPESTRUCT
    (102) IMPRIMIR -> . println parentesisa SCONTPRNTS parentesisc
    (103) IMPRIMIR -> . print parentesisa SCONTPRNTS parentesisc
    (81) FUNCIONES -> . FIF
    (82) FUNCIONES -> . FWHILE
    (83) FUNCIONES -> . FFOR
    (70) SCOPE -> . global ASIGNACION
    (71) SCOPE -> . local ASIGNACION
    (72) SCOPE -> . ASIGNACION
    (59) DECLFUNC -> . function id parentesisa PARAMS parentesisc INSTRUCCIONES end
    (65) LLAMADAFUNC -> . id parentesisa PARAMSFUNCS parentesisc
    (84) TRANSF -> . break
    (85) TRANSF -> . continue
    (86) TRANSF -> . return
    (87) TRANSF -> . return ALGO
    (22) SOPERACIONES -> . SOPSTRING
    (23) SOPERACIONES -> . SOPNATIV
    (24) SOPERACIONES -> . OPID
    (25) SOPERACIONES -> . SOPLOG
    (26) SOPERACIONES -> . DECLNATIV
    (38) TYPESTRUCT -> . STRUCT
    (39) TYPESTRUCT -> . mutable STRUCT
    (94) FIF -> . if SOPLOG INSTRUCCIONES FELSEIF
    (95) FIF -> . if SOPLOG INSTRUCCIONES FELSE
    (96) FIF -> . if SOPLOG INSTRUCCIONES end
    (93) FWHILE -> . while SOPLOG INSTRUCCIONES end
    (88) FFOR -> . for id in RANGO INSTRUCCIONES end
    (76) ASIGNACION -> . NOMBREALGO igual SOPSTRING
    (77) ASIGNACION -> . NOMBREALGO igual ALGO
    (78) ASIGNACION -> . NOMBREALGO igual ALGO dos_dospuntos TIPOS
    (79) ASIGNACION -> . NOMBREALGO igual nothing
    (80) ASIGNACION -> . NOMBREALGO
    (157) SOPSTRING -> . SOPSTRING asterisco SOPSTRING
    (158) SOPSTRING -> . SOPSTRING elevado int
    (159) SOPSTRING -> . SOPSTRING elevado id
    (160) SOPSTRING -> . cadena
    (161) SOPSTRING -> . caracter
    (162) SOPSTRING -> . id
    (163) SOPSTRING -> . SOPNATIV
    (164) SOPSTRING -> . DECLNATIV
    (144) SOPNATIV -> . uppercase parentesisa SOPN parentesisc
    (145) SOPNATIV -> . lowercase parentesisa SOPN parentesisc
    (146) SOPNATIV -> . length parentesisa SOPN parentesisc
    (147) SOPNATIV -> . pop parentesisa SOPN parentesisc
    (151) SOPNATIV -> . push parentesisa SOPN coma ALGO parentesisc
    (109) OPID -> . OPID mas OPID
    (110) OPID -> . OPID menos OPID
    (111) OPID -> . OPID asterisco OPID
    (112) OPID -> . OPID dividido OPID
    (113) OPID -> . OPID modulo OPID
    (114) OPID -> . OPID elevado OPID
    (115) OPID -> . menos OPID
    (116) OPID -> . parentesisa OPID parentesisc
    (117) OPID -> . NATMATH parentesisa OPID parentesisc
    (118) OPID -> . log parentesisa OPID coma OPID parentesisc
    (119) OPID -> . int
    (120) OPID -> . flotante
    (121) OPID -> . id
    (122) OPID -> . cadena
    (123) OPID -> . caracter
    (124) OPID -> . LLAMADARR
    (125) OPID -> . LLAMADAFUNC
    (126) OPID -> . SOPNATIV
    (127) SOPLOG -> . SOPLOG and SOPLOG
    (128) SOPLOG -> . SOPLOG or SOPLOG
    (129) SOPLOG -> . SOPLOG mayorque SOPLOG
    (130) SOPLOG -> . SOPLOG menorque SOPLOG
    (131) SOPLOG -> . SOPLOG mayoriwal SOPLOG
    (132) SOPLOG -> . SOPLOG menoriwal SOPLOG
    (133) SOPLOG -> . SOPLOG iwaliwal SOPLOG
    (134) SOPLOG -> . SOPLOG distintoque SOPLOG
    (135) SOPLOG -> . parentesisa SOPLOG parentesisc
    (136) SOPLOG -> . OPID
    (137) SOPLOG -> . LLAMADARR
    (138) SOPLOG -> . SOPNATIV
    (139) SOPLOG -> . cadena
    (140) SOPLOG -> . caracter
    (141) SOPLOG -> . id
    (142) SOPLOG -> . true
    (143) SOPLOG -> . false
    (152) DECLNATIV -> . parse parentesisa TIPOS coma ALGO parentesisc
    (153) DECLNATIV -> . trunc parentesisa ALGO parentesisc
    (154) DECLNATIV -> . float parentesisa ALGO parentesisc
    (155) DECLNATIV -> . string parentesisa ALGO parentesisc
    (156) DECLNATIV -> . typeof parentesisa ALGO parentesisc
    (40) STRUCT -> . struct id ATRIBUTOS end
    (73) NOMBREALGO -> . LLAMADARR
    (74) NOMBREALGO -> . STRUCTASIGNS
    (75) NOMBREALGO -> . id
    (165) NATMATH -> . log10
    (166) NATMATH -> . sin
    (167) NATMATH -> . cos
    (168) NATMATH -> . tan
    (169) NATMATH -> . sqrt
    (54) LLAMADARR -> . id INDARS
    (47) STRUCTASIGNS -> . STRUCTASIGNS punto STRUCTASIGN
    (48) STRUCTASIGNS -> . STRUCTASIGN
    (46) STRUCTASIGN -> . id

    println         shift and go to state 12
    print           shift and go to state 14
    global          shift and go to state 18
    local           shift and go to state 20
    function        shift and go to state 21
    id              shift and go to state 22
    break           shift and go to state 23
    continue        shift and go to state 24
    return          shift and go to state 25
    mutable         shift and go to state 32
    if              shift and go to state 33
    while           shift and go to state 34
    for             shift and go to state 35
    cadena          shift and go to state 38
    caracter        shift and go to state 39
    uppercase       shift and go to state 40
    lowercase       shift and go to state 41
    length          shift and go to state 42
    pop             shift and go to state 43
    push            shift and go to state 44
    menos           shift and go to state 45
    parentesisa     shift and go to state 13
    log             shift and go to state 47
    int             shift and go to state 37
    flotante        shift and go to state 48
    true            shift and go to state 50
    false           shift and go to state 51
    parse           shift and go to state 52
    trunc           shift and go to state 53
    float           shift and go to state 54
    string          shift and go to state 55
    typeof          shift and go to state 56
    struct          shift and go to state 57
    log10           shift and go to state 59
    sin             shift and go to state 60
    cos             shift and go to state 61
    tan             shift and go to state 62
    sqrt            shift and go to state 63

    INICIO                         shift and go to state 1
    INSTRUCCIONES2                 shift and go to state 2
    INSTRUCCION2                   shift and go to state 3
    IMPRIMIR                       shift and go to state 4
    FUNCIONES                      shift and go to state 5
    SCOPE                          shift and go to state 6
    DECLFUNC                       shift and go to state 7
    LLAMADAFUNC                    shift and go to state 8
    TRANSF                         shift and go to state 9
    SOPERACIONES                   shift and go to state 10
    TYPESTRUCT                     shift and go to state 11
    FIF                            shift and go to state 15
    FWHILE                         shift and go to state 16
    FFOR                           shift and go to state 17
    ASIGNACION                     shift and go to state 19
    SOPSTRING                      shift and go to state 26
    SOPNATIV                       shift and go to state 27
    OPID                           shift and go to state 28
    SOPLOG                         shift and go to state 29
    DECLNATIV                      shift and go to state 30
    STRUCT                         shift and go to state 31
    NOMBREALGO                     shift and go to state 36
    NATMATH                        shift and go to state 46
    LLAMADARR                      shift and go to state 49
    STRUCTASIGNS                   shift and go to state 58
    STRUCTASIGN                    shift and go to state 64

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> INSTRUCCIONES2 .
    (2) INSTRUCCIONES2 -> INSTRUCCIONES2 . INSTRUCCION2 puntocoma
    (4) INSTRUCCION2 -> . IMPRIMIR
    (5) INSTRUCCION2 -> . FUNCIONES
    (6) INSTRUCCION2 -> . SCOPE
    (7) INSTRUCCION2 -> . DECLFUNC
    (8) INSTRUCCION2 -> . LLAMADAFUNC
    (9) INSTRUCCION2 -> . TRANSF
    (10) INSTRUCCION2 -> . SOPERACIONES
    (11) INSTRUCCION2 -> . TYPESTRUCT
    (102) IMPRIMIR -> . println parentesisa SCONTPRNTS parentesisc
    (103) IMPRIMIR -> . print parentesisa SCONTPRNTS parentesisc
    (81) FUNCIONES -> . FIF
    (82) FUNCIONES -> . FWHILE
    (83) FUNCIONES -> . FFOR
    (70) SCOPE -> . global ASIGNACION
    (71) SCOPE -> . local ASIGNACION
    (72) SCOPE -> . ASIGNACION
    (59) DECLFUNC -> . function id parentesisa PARAMS parentesisc INSTRUCCIONES end
    (65) LLAMADAFUNC -> . id parentesisa PARAMSFUNCS parentesisc
    (84) TRANSF -> . break
    (85) TRANSF -> . continue
    (86) TRANSF -> . return
    (87) TRANSF -> . return ALGO
    (22) SOPERACIONES -> . SOPSTRING
    (23) SOPERACIONES -> . SOPNATIV
    (24) SOPERACIONES -> . OPID
    (25) SOPERACIONES -> . SOPLOG
    (26) SOPERACIONES -> . DECLNATIV
    (38) TYPESTRUCT -> . STRUCT
    (39) TYPESTRUCT -> . mutable STRUCT
    (94) FIF -> . if SOPLOG INSTRUCCIONES FELSEIF
    (95) FIF -> . if SOPLOG INSTRUCCIONES FELSE
    (96) FIF -> . if SOPLOG INSTRUCCIONES end
    (93) FWHILE -> . while SOPLOG INSTRUCCIONES end
    (88) FFOR -> . for id in RANGO INSTRUCCIONES end
    (76) ASIGNACION -> . NOMBREALGO igual SOPSTRING
    (77) ASIGNACION -> . NOMBREALGO igual ALGO
    (78) ASIGNACION -> . NOMBREALGO igual ALGO dos_dospuntos TIPOS
    (79) ASIGNACION -> . NOMBREALGO igual nothing
    (80) ASIGNACION -> . NOMBREALGO
    (157) SOPSTRING -> . SOPSTRING asterisco SOPSTRING
    (158) SOPSTRING -> . SOPSTRING elevado int
    (159) SOPSTRING -> . SOPSTRING elevado id
    (160) SOPSTRING -> . cadena
    (161) SOPSTRING -> . caracter
    (162) SOPSTRING -> . id
    (163) SOPSTRING -> . SOPNATIV
    (164) SOPSTRING -> . DECLNATIV
    (144) SOPNATIV -> . uppercase parentesisa SOPN parentesisc
    (145) SOPNATIV -> . lowercase parentesisa SOPN parentesisc
    (146) SOPNATIV -> . length parentesisa SOPN parentesisc
    (147) SOPNATIV -> . pop parentesisa SOPN parentesisc
    (151) SOPNATIV -> . push parentesisa SOPN coma ALGO parentesisc
    (109) OPID -> . OPID mas OPID
    (110) OPID -> . OPID menos OPID
    (111) OPID -> . OPID asterisco OPID
    (112) OPID -> . OPID dividido OPID
    (113) OPID -> . OPID modulo OPID
    (114) OPID -> . OPID elevado OPID
    (115) OPID -> . menos OPID
    (116) OPID -> . parentesisa OPID parentesisc
    (117) OPID -> . NATMATH parentesisa OPID parentesisc
    (118) OPID -> . log parentesisa OPID coma OPID parentesisc
    (119) OPID -> . int
    (120) OPID -> . flotante
    (121) OPID -> . id
    (122) OPID -> . cadena
    (123) OPID -> . caracter
    (124) OPID -> . LLAMADARR
    (125) OPID -> . LLAMADAFUNC
    (126) OPID -> . SOPNATIV
    (127) SOPLOG -> . SOPLOG and SOPLOG
    (128) SOPLOG -> . SOPLOG or SOPLOG
    (129) SOPLOG -> . SOPLOG mayorque SOPLOG
    (130) SOPLOG -> . SOPLOG menorque SOPLOG
    (131) SOPLOG -> . SOPLOG mayoriwal SOPLOG
    (132) SOPLOG -> . SOPLOG menoriwal SOPLOG
    (133) SOPLOG -> . SOPLOG iwaliwal SOPLOG
    (134) SOPLOG -> . SOPLOG distintoque SOPLOG
    (135) SOPLOG -> . parentesisa SOPLOG parentesisc
    (136) SOPLOG -> . OPID
    (137) SOPLOG -> . LLAMADARR
    (138) SOPLOG -> . SOPNATIV
    (139) SOPLOG -> . cadena
    (140) SOPLOG -> . caracter
    (141) SOPLOG -> . id
    (142) SOPLOG -> . true
    (143) SOPLOG -> . false
    (152) DECLNATIV -> . parse parentesisa TIPOS coma ALGO parentesisc
    (153) DECLNATIV -> . trunc parentesisa ALGO parentesisc
    (154) DECLNATIV -> . float parentesisa ALGO parentesisc
    (155) DECLNATIV -> . string parentesisa ALGO parentesisc
    (156) DECLNATIV -> . typeof parentesisa ALGO parentesisc
    (40) STRUCT -> . struct id ATRIBUTOS end
    (73) NOMBREALGO -> . LLAMADARR
    (74) NOMBREALGO -> . STRUCTASIGNS
    (75) NOMBREALGO -> . id
    (165) NATMATH -> . log10
    (166) NATMATH -> . sin
    (167) NATMATH -> . cos
    (168) NATMATH -> . tan
    (169) NATMATH -> . sqrt
    (54) LLAMADARR -> . id INDARS
    (47) STRUCTASIGNS -> . STRUCTASIGNS punto STRUCTASIGN
    (48) STRUCTASIGNS -> . STRUCTASIGN
    (46) STRUCTASIGN -> . id

    $end            reduce using rule 1 (INICIO -> INSTRUCCIONES2 .)
    println         shift and go to state 12
    print           shift and go to state 14
    global          shift and go to state 18
    local           shift and go to state 20
    function        shift and go to state 21
    id              shift and go to state 22
    break           shift and go to state 23
    continue        shift and go to state 24
    return          shift and go to state 25
    mutable         shift and go to state 32
    if              shift and go to state 33
    while           shift and go to state 34
    for             shift and go to state 35
    cadena          shift and go to state 38
    caracter        shift and go to state 39
    uppercase       shift and go to state 40
    lowercase       shift and go to state 41
    length          shift and go to state 42
    pop             shift and go to state 43
    push            shift and go to state 44
    menos           shift and go to state 45
    parentesisa     shift and go to state 13
    log             shift and go to state 47
    int             shift and go to state 37
    flotante        shift and go to state 48
    true            shift and go to state 50
    false           shift and go to state 51
    parse           shift and go to state 52
    trunc           shift and go to state 53
    float           shift and go to state 54
    string          shift and go to state 55
    typeof          shift and go to state 56
    struct          shift and go to state 57
    log10           shift and go to state 59
    sin             shift and go to state 60
    cos             shift and go to state 61
    tan             shift and go to state 62
    sqrt            shift and go to state 63

    INSTRUCCION2                   shift and go to state 65
    IMPRIMIR                       shift and go to state 4
    FUNCIONES                      shift and go to state 5
    SCOPE                          shift and go to state 6
    DECLFUNC                       shift and go to state 7
    LLAMADAFUNC                    shift and go to state 8
    TRANSF                         shift and go to state 9
    SOPERACIONES                   shift and go to state 10
    TYPESTRUCT                     shift and go to state 11
    FIF                            shift and go to state 15
    FWHILE                         shift and go to state 16
    FFOR                           shift and go to state 17
    ASIGNACION                     shift and go to state 19
    SOPSTRING                      shift and go to state 26
    SOPNATIV                       shift and go to state 27
    OPID                           shift and go to state 28
    SOPLOG                         shift and go to state 29
    DECLNATIV                      shift and go to state 30
    STRUCT                         shift and go to state 31
    NOMBREALGO                     shift and go to state 36
    NATMATH                        shift and go to state 46
    LLAMADARR                      shift and go to state 49
    STRUCTASIGNS                   shift and go to state 58
    STRUCTASIGN                    shift and go to state 64

state 3

    (3) INSTRUCCIONES2 -> INSTRUCCION2 . puntocoma

    puntocoma       shift and go to state 66


state 4

    (4) INSTRUCCION2 -> IMPRIMIR .

    puntocoma       reduce using rule 4 (INSTRUCCION2 -> IMPRIMIR .)


state 5

    (5) INSTRUCCION2 -> FUNCIONES .

    puntocoma       reduce using rule 5 (INSTRUCCION2 -> FUNCIONES .)


state 6

    (6) INSTRUCCION2 -> SCOPE .

    puntocoma       reduce using rule 6 (INSTRUCCION2 -> SCOPE .)


state 7

    (7) INSTRUCCION2 -> DECLFUNC .

    puntocoma       reduce using rule 7 (INSTRUCCION2 -> DECLFUNC .)


state 8

    (8) INSTRUCCION2 -> LLAMADAFUNC .
    (125) OPID -> LLAMADAFUNC .

  ! reduce/reduce conflict for puntocoma resolved using rule 8 (INSTRUCCION2 -> LLAMADAFUNC .)
    puntocoma       reduce using rule 8 (INSTRUCCION2 -> LLAMADAFUNC .)
    mas             reduce using rule 125 (OPID -> LLAMADAFUNC .)
    menos           reduce using rule 125 (OPID -> LLAMADAFUNC .)
    asterisco       reduce using rule 125 (OPID -> LLAMADAFUNC .)
    dividido        reduce using rule 125 (OPID -> LLAMADAFUNC .)
    modulo          reduce using rule 125 (OPID -> LLAMADAFUNC .)
    elevado         reduce using rule 125 (OPID -> LLAMADAFUNC .)
    and             reduce using rule 125 (OPID -> LLAMADAFUNC .)
    or              reduce using rule 125 (OPID -> LLAMADAFUNC .)
    mayorque        reduce using rule 125 (OPID -> LLAMADAFUNC .)
    menorque        reduce using rule 125 (OPID -> LLAMADAFUNC .)
    mayoriwal       reduce using rule 125 (OPID -> LLAMADAFUNC .)
    menoriwal       reduce using rule 125 (OPID -> LLAMADAFUNC .)
    iwaliwal        reduce using rule 125 (OPID -> LLAMADAFUNC .)
    distintoque     reduce using rule 125 (OPID -> LLAMADAFUNC .)

  ! puntocoma       [ reduce using rule 125 (OPID -> LLAMADAFUNC .) ]


state 9

    (9) INSTRUCCION2 -> TRANSF .

    puntocoma       reduce using rule 9 (INSTRUCCION2 -> TRANSF .)


state 10

    (10) INSTRUCCION2 -> SOPERACIONES .

    puntocoma       reduce using rule 10 (INSTRUCCION2 -> SOPERACIONES .)


state 11

    (11) INSTRUCCION2 -> TYPESTRUCT .

    puntocoma       reduce using rule 11 (INSTRUCCION2 -> TYPESTRUCT .)


state 12

    (102) IMPRIMIR -> println . parentesisa SCONTPRNTS parentesisc

    parentesisa     shift and go to state 67


state 13
